--- a/thr/web/testSuites.xhtml
+++ b/thr/web/testSuites.xhtml
@@ -3,37 +3,96 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Test Suites Result</title>
+        <h:outputStylesheet library="css" name="primefaces-ex.css" />
     </h:head>
     <h:body style="font-size: smaller">
         <ui:param name="start" value="#{testSuitesView.startTime}" />
         <ui:param name="stop" value="#{testSuitesView.stopTime}" />
-        <ui:param name="number" value="#{testSuitesView.numberOfRecords}" />
+        <ui:param name="number" value="#{testSuitesView.numberOfEntries}" />
         <ui:param name="invisible" value="#{testSuitesView.invisibleIncluded}" />
         <ui:param name="suite" value="#{testSuitesView.suiteName}" />
-        
+
         <h:form id="form">
-            <h:panelGrid id="panel" columns="4" border="0" cellpadding="5" cellspacing="0">
-                <h:panelGroup>
-                    <h:outputLabel id="lstarttime" for="starttime" value="start: "/>
-                    <p:calendar id="starttime" pattern="yyyy-MM-dd HH:mm" value="#{start}" />
-                </h:panelGroup>
-                <h:panelGroup>
-                    <h:outputLabel id="lstoptime" for="stoptime" value="stop: " />
-                    <p:calendar id="stoptime" pattern="yyyy-MM-dd HH:mm" value="#{stop}" />
-                </h:panelGroup>
-                <h:panelGroup>
-                    <h:outputLabel id="lnumber" for="number" value="maximum number of records: "/>
-                    <h:inputText value="#{number}" id="number" />
-                </h:panelGroup>
-                <h:selectBooleanCheckbox id="invisibleIncluded" value="#{invisible}" >
-                    include invisible entries
-                </h:selectBooleanCheckbox>
-            </h:panelGrid>
+            <h:panelGroup>
+                <h:outputText value="All Test Suite Results" style="font-size: x-large; font-variant: small-caps; font-weight: bold" />
+                <p:spacer width="20" />
+                <h:outputText value="from" />
+                <p:spacer width="10" />
+                <p:calendar id="starttime" pattern="yyyy-MM-dd HH:mm" value="#{start}"  />
+                <p:spacer width="10" />
+                <h:outputText value="to" />
+                <p:spacer width="10" />
+                <p:calendar id="stoptime" pattern="yyyy-MM-dd HH:mm" value="#{stop}" />
+                <h:outputText value="," />
+                <p:spacer width="10" />
+                <h:outputText value="with maximum" />
+                <p:spacer width="10" />
+                <p:selectOneMenu id="number" value="#{number}" editable="true">
+                    <f:selectItem id="number10" itemLabel="10" itemValue="10" />
+                    <f:selectItem id="number20" itemLabel="20" itemValue="20" />
+                    <f:selectItem id="number50" itemLabel="50" itemValue="50" />
+                    <f:selectItem id="number100" itemLabel="100" itemValue="100" />
+                    <f:selectItem id="number200" itemLabel="200" itemValue="200" />
+                    <f:selectItem id="number500" itemLabel="500" itemValue="500" />
+                </p:selectOneMenu>
+                <p:spacer width="10" />
+                <h:outputText value="entries," />
+                <p:spacer width="10" />
+                <h:selectOneMenu id="invisibleIncluded" value="#{invisible}">
+                    <f:selectItem id="invisibleIncluded_true" itemLabel="including invisible entries" itemValue="true" />
+                    <f:selectItem id="invisibleIncluded_false" itemLabel="including no invisible entries" itemValue="false" />
+                </h:selectOneMenu>
+            </h:panelGroup>
         </h:form>
+
+        <p style="margin-top: 20px" />
+
+        <p:dataTable value="#{testSuitesView.results}" var="row" rowIndexVar="rowIndex" resizableColumns="true"
+                     rowKey="#{row.get('SUITE_RESULT_ID')}" selection="#{testSuitesView.resultsSelected}">
+            <p:column selectionMode="multiple" width="10" rendered="#{not empty testSuitesView.suiteName}"/>
+            <p:column headerText="Index" width="38">
+                <h:outputText value="#{rowIndex + 1}" />
+            </p:column>
+            <p:column headerText="Execution Id" width="88">
+                <h:outputText value="#{row.get('_EXEC_ID')}" style="font-family: monospace" />
+            </p:column>
+            <p:column headerText="Test Suite Name">
+                <h:outputText value="#{row.get('SUITE_NAME')}" />
+            </p:column>
+            <p:column headerText="Job Name">
+                <nobr><h:outputText value="#{row.get('JOB_NAME')}" /></nobr>
+            </p:column>
+            <p:column headerText="Build #" width="52">
+                <h:outputText value="#{row.get('JOB_BUILD_NUMBER')}" />
+            </p:column>
+            <p:column headerText="Result" width="68">
+                <h:outputText value="#{row.get('EXECUTION_RESULT')}" />
+            </p:column>
+            <p:column headerText="Total # " width="58">
+                <h:outputText value="#{row.get('NUMBER_OF_TESTS')}" />
+            </p:column>
+            <p:column headerText="# of Failure" width="78">
+                <h:outputText value="#{row.get('NUMBER_OF_FAILURE')}"/>
+            </p:column>
+            <p:column headerText="Start Time" width="158">
+                <nobr>
+                    <h:outputText value="#{mySqlBaseBean.convertToDate(row.get('START_TIME'))}" style="font-family: monospace">
+                        <f:convertDateTime type="date" pattern="EEE yyyy-MM-dd HH:mm:ss" timeZone="US/Pacific" />
+                    </h:outputText>
+                </nobr>
+            </p:column>
+            <p:column headerText="Stop Time" width="98">
+                <nobr>
+                    <h:outputText value="#{mySqlBaseBean.convertToDate(row.get('STOP_TIME'))}" style="font-family: monospace">
+                        <f:convertDateTime type="date" pattern="MM-dd HH:mm:ss" timeZone="US/Pacific" />
+                    </h:outputText>
+                </nobr>
+            </p:column>
+        </p:dataTable>
 
     </h:body>
 </html>
-
