--- a/thr/web/testSuites.xhtml
+++ b/thr/web/testSuites.xhtml
@@ -7,78 +7,101 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Test Suites Result</title>
+        <h:outputStylesheet library="css" name="thr.css" />
         <h:outputStylesheet library="css" name="primefaces-ex.css" />
+
+        <script>
+            function query(suite) {
+                var start = PF("wv_start").getDate().getTime();
+                var stop = PF("wv_stop").getDate().getTime();
+                var number = PF("wv_number").value;
+                var invisible = PF("wv_invisible").getSelectedValue();
+                var search = "?start=" + start + "&amp;stop=" + stop + "&amp;number=" + number + "&amp;invisible=" + invisible;
+                if (suite) {
+                    search += "&amp;suite=" + suite;
+                }
+                location.search = search;
+            }
+        </script>
     </h:head>
-    <h:body style="font-size: smaller">
-        <ui:param name="start" value="#{testSuitesView.startTime}" />
-        <ui:param name="stop" value="#{testSuitesView.stopTime}" />
-        <ui:param name="number" value="#{testSuitesView.numberOfEntries}" />
-        <ui:param name="invisible" value="#{testSuitesView.invisibleIncluded}" />
-        <ui:param name="suite" value="#{testSuitesView.suiteName}" />
+    <h:body>
 
-        <h:form id="form">
-            <h:panelGroup>
-                <h:outputText value="All Test Suite Results" style="font-size: x-large; font-variant: small-caps; font-weight: bold" />
-                <p:spacer width="20" />
-                <h:outputText value="from" />
-                <p:spacer width="10" />
-                <p:calendar id="starttime" pattern="yyyy-MM-dd HH:mm" value="#{start}"  />
-                <p:spacer width="10" />
-                <h:outputText value="to" />
-                <p:spacer width="10" />
-                <p:calendar id="stoptime" pattern="yyyy-MM-dd HH:mm" value="#{stop}" />
-                <h:outputText value="," />
-                <p:spacer width="10" />
-                <h:outputText value="with maximum" />
-                <p:spacer width="10" />
-                <p:selectOneMenu id="number" value="#{number}" editable="true">
-                    <f:selectItem id="number10" itemLabel="10" itemValue="10" />
-                    <f:selectItem id="number20" itemLabel="20" itemValue="20" />
-                    <f:selectItem id="number50" itemLabel="50" itemValue="50" />
-                    <f:selectItem id="number100" itemLabel="100" itemValue="100" />
-                    <f:selectItem id="number200" itemLabel="200" itemValue="200" />
-                    <f:selectItem id="number500" itemLabel="500" itemValue="500" />
-                </p:selectOneMenu>
-                <p:spacer width="10" />
-                <h:outputText value="entries," />
-                <p:spacer width="10" />
-                <h:selectOneMenu id="invisibleIncluded" value="#{invisible}">
-                    <f:selectItem id="invisibleIncluded_true" itemLabel="including invisible entries" itemValue="true" />
-                    <f:selectItem id="invisibleIncluded_false" itemLabel="including no invisible entries" itemValue="false" />
-                </h:selectOneMenu>
-            </h:panelGroup>
-        </h:form>
+        <h:panelGrid>
+            <h:outputText value="All Test Suite Results" style="font-size: x-large; font-variant: small-caps; font-weight: bold;" />
+            <p:spacer width="10px" />
+        </h:panelGrid>
 
-        <p style="margin-top: 20px" />
+        <h:panelGrid columns="20">
+            <h:outputText value="From" />
+            <p:calendar id="starttime" widgetVar="wv_start" pattern="yyyy-MM-dd HH:mm" value="#{testSuitesView.startTime}">
+                <p:ajax event="dateSelect" oncomplete="query();" global="false" />
+            </p:calendar>
+            <h:outputText value="to" />
+            <p:calendar id="stoptime" widgetVar="wv_stop" pattern="yyyy-MM-dd HH:mm" value="#{testSuitesView.stopTime}">
+                <p:ajax event="dateSelect" oncomplete="query();" global="false" />
+            </p:calendar>
+            <h:outputText value="," />
+            <h:outputText value="with maximum" />
+            <p:spinner id="number" widgetVar="wv_number" value="#{testSuitesView.numberOfEntries}"
+                       min="1" max="10000" size="5" onchange="query();" />
+            <h:outputText value="entries," />
+            <p:selectOneMenu id="invisibleIncluded" widgetVar="wv_invisible" value="#{testSuitesView.invisibleIncluded}"
+                             onchange="query();">
+                <f:selectItem id="invisibleIncluded_true" itemLabel="including invisible entries" itemValue="true" />
+                <f:selectItem id="invisibleIncluded_false" itemLabel="including no invisible entries" itemValue="false" />
+            </p:selectOneMenu>
+        </h:panelGrid>
 
         <p:dataTable value="#{testSuitesView.results}" var="row" rowIndexVar="rowIndex" resizableColumns="true"
                      rowKey="#{row.get('SUITE_RESULT_ID')}" selection="#{testSuitesView.resultsSelected}">
-            <p:column selectionMode="multiple" width="10" rendered="#{not empty testSuitesView.suiteName}"/>
-            <p:column headerText="Index" width="38">
+            <p:column headerText="Index" width="36">
                 <h:outputText value="#{rowIndex + 1}" />
             </p:column>
-            <p:column headerText="Execution Id" width="88">
+            <p:column selectionMode="multiple" width="16" rendered="#{not empty testSuitesView.suiteName}"/>
+
+            <p:column width="80">
+                <f:facet name="header">
+                    <h:outputText value="Execution&#10;Id" escape="false" style="white-space: pre-line;" />
+                </f:facet>
                 <h:outputText value="#{row.get('_EXEC_ID')}" style="font-family: monospace" />
             </p:column>
+
             <p:column headerText="Test Suite Name">
                 <h:outputText value="#{row.get('SUITE_NAME')}" />
             </p:column>
-            <p:column headerText="Job Name">
+            <p:column headerText="Job Name" width="168">
                 <nobr><h:outputText value="#{row.get('JOB_NAME')}" /></nobr>
             </p:column>
-            <p:column headerText="Build #" width="52">
-                <h:outputText value="#{row.get('JOB_BUILD_NUMBER')}" />
+
+            <ui:param name="bn" value="#{row.get('JOB_BUILD_NUMBER')}" />
+            <p:column width="40">
+                <f:facet name="header">
+                    <h:outputText value="Build&#10;#" escape="false" style="white-space: pre-line;" />
+                </f:facet>
+                <h:outputText value="#{bn}" rendered="#{bn gt 0}" />
             </p:column>
+
+            <ui:param name="result" value="#{row.get('EXECUTION_RESULT')}" />
             <p:column headerText="Result" width="68">
-                <h:outputText value="#{row.get('EXECUTION_RESULT')}" />
+                <h:outputText value="#{result}" class="result-pass" rendered="#{result eq 'PASS'}"/>
+                <h:outputText value="#{result}" class="result-fail" rendered="#{result ne 'PASS'}"/>
             </p:column>
-            <p:column headerText="Total # " width="58">
+
+            <p:column width="50">
+                <f:facet name="header">
+                    <h:outputText value="# of&#10;Tests" escape="false" style="white-space: pre-line;" />
+                </f:facet>
                 <h:outputText value="#{row.get('NUMBER_OF_TESTS')}" />
             </p:column>
-            <p:column headerText="# of Failure" width="78">
+
+            <p:column width="58">
+                <f:facet name="header">
+                    <h:outputText value="# of&#10;Failed" escape="false" style="white-space: pre-line;" />
+                </f:facet>
                 <h:outputText value="#{row.get('NUMBER_OF_FAILURE')}"/>
             </p:column>
-            <p:column headerText="Start Time" width="158">
+
+            <p:column headerText="Start Time" width="166">
                 <nobr>
                     <h:outputText value="#{mySqlBaseBean.convertToDate(row.get('START_TIME'))}" style="font-family: monospace">
                         <f:convertDateTime type="date" pattern="EEE yyyy-MM-dd HH:mm:ss" timeZone="US/Pacific" />
@@ -94,5 +117,10 @@
             </p:column>
         </p:dataTable>
 
+        <script>
+            jQuery(document).ready(function () {
+                console.log(location);
+            });
+        </script>
     </h:body>
 </html>
