--- a/thr/web/testSuites.xhtml
+++ b/thr/web/testSuites.xhtml
@@ -6,50 +6,59 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Test Suites Result</title>
         <h:outputStylesheet library="css" name="thr.css" />
         <h:outputStylesheet library="css" name="primefaces-ex.css" />
-
-        <script>
-            function query(suite) {
-                var start = PF("wv_start").getDate().getTime();
-                var stop = PF("wv_stop").getDate().getTime();
-                var number = PF("wv_number").value;
-                var invisible = PF("wv_invisible").getSelectedValue();
-                var search = "?start=" + start + "&amp;stop=" + stop + "&amp;number=" + number + "&amp;invisible=" + invisible;
-                if (suite) {
-                    search += "&amp;suite=" + suite;
-                }
-                location.search = search;
-            }
-        </script>
+        <h:outputScript library="js" name="thr.js" />
+        <title>Test Suites Result</title>
     </h:head>
     <h:body>
+        <ui:param name="suite" value="#{testSuitesView.suiteName}" />
 
         <h:panelGrid>
             <h:outputText value="All Test Suite Results" style="font-size: x-large; font-variant: small-caps; font-weight: bold;" />
             <p:spacer width="10px" />
         </h:panelGrid>
 
-        <h:panelGrid columns="20">
+        <h:panelGrid columns="20" rendered="#{empty suite}">
             <h:outputText value="From" />
             <p:calendar id="starttime" widgetVar="wv_start" pattern="yyyy-MM-dd HH:mm" value="#{testSuitesView.startTime}">
-                <p:ajax event="dateSelect" oncomplete="query();" global="false" />
+                <p:ajax event="dateSelect" oncomplete="thr.querySuiteResults()" global="false" />
             </p:calendar>
             <h:outputText value="to" />
             <p:calendar id="stoptime" widgetVar="wv_stop" pattern="yyyy-MM-dd HH:mm" value="#{testSuitesView.stopTime}">
-                <p:ajax event="dateSelect" oncomplete="query();" global="false" />
+                <p:ajax event="dateSelect" oncomplete="thr.querySuiteResults()" global="false" />
             </p:calendar>
             <h:outputText value="," />
             <h:outputText value="with maximum" />
             <p:spinner id="number" widgetVar="wv_number" value="#{testSuitesView.numberOfEntries}"
-                       min="1" max="10000" size="5" onchange="query();" />
+                       min="1" max="10000" size="5" onchange="thr.querySuiteResults()" />
             <h:outputText value="entries," />
             <p:selectOneMenu id="invisibleIncluded" widgetVar="wv_invisible" value="#{testSuitesView.invisibleIncluded}"
-                             onchange="query();">
+                             onchange="thr.querySuiteResults()">
                 <f:selectItem id="invisibleIncluded_true" itemLabel="including invisible entries" itemValue="true" />
                 <f:selectItem id="invisibleIncluded_false" itemLabel="including no invisible entries" itemValue="false" />
             </p:selectOneMenu>
+        </h:panelGrid>
+        <h:panelGrid columns="20" rendered="#{not empty suite}">
+            <h:outputText value="From" />
+            <p:calendar id="starttime" widgetVar="wv_start" pattern="yyyy-MM-dd HH:mm" value="#{testSuitesView.startTime}">
+                <p:ajax event="dateSelect" oncomplete="thr.querySuiteResults('#{suite}')" global="false" />
+            </p:calendar>
+            <h:outputText value="to" />
+            <p:calendar id="stoptime" widgetVar="wv_stop" pattern="yyyy-MM-dd HH:mm" value="#{testSuitesView.stopTime}">
+                <p:ajax event="dateSelect" oncomplete="thr.querySuiteResults('#{suite}')" global="false" />
+            </p:calendar>
+            <h:outputText value="," />
+            <h:outputText value="with maximum" />
+            <p:spinner id="number" widgetVar="wv_number" value="#{testSuitesView.numberOfEntries}"
+                       min="1" max="10000" size="5" onchange="thr.querySuiteResults('#{suite}')" />
+            <h:outputText value="entries," />
+            <p:selectOneMenu id="invisibleIncluded" widgetVar="wv_invisible" value="#{testSuitesView.invisibleIncluded}"
+                             onchange="thr.querySuiteResults('#{suite}')">
+                <f:selectItem id="invisibleIncluded_true" itemLabel="including invisible entries" itemValue="true" />
+                <f:selectItem id="invisibleIncluded_false" itemLabel="including no invisible entries" itemValue="false" />
+            </p:selectOneMenu>
+            <p:commandButton onclick="thr.querySuiteResults()" value="All Test Suites" style="font-size: xx-small" />
         </h:panelGrid>
 
         <p:dataTable value="#{testSuitesView.results}" var="row" rowIndexVar="rowIndex" resizableColumns="true"
@@ -57,17 +66,20 @@
             <p:column headerText="Index" width="36">
                 <h:outputText value="#{rowIndex + 1}" />
             </p:column>
-            <p:column selectionMode="multiple" width="16" rendered="#{not empty testSuitesView.suiteName}"/>
 
             <p:column width="80">
                 <f:facet name="header">
                     <h:outputText value="Execution&#10;Id" escape="false" style="white-space: pre-line;" />
                 </f:facet>
-                <h:outputText value="#{row.get('_EXEC_ID')}" style="font-family: monospace" />
+                <h:outputLink value="testSuite.xhtml?srid=#{row.get('SUITE_RESULT_ID')}" target="_blank"
+                              style="font-family: monospace" >#{row.get('_EXEC_ID')}</h:outputLink>
             </p:column>
 
             <p:column headerText="Test Suite Name">
-                <h:outputText value="#{row.get('SUITE_NAME')}" />
+                <ui:param name="s" value="#{row.get('SUITE_NAME')}" />
+                <h:outputLink onclick="thr.querySuiteResults('#{s}');
+                        return false;" rendered="#{empty suite}">#{s}</h:outputLink>
+                <h:outputText rendered="#{not empty suite}" value="#{s}" />
             </p:column>
             <p:column headerText="Job Name" width="168">
                 <nobr><h:outputText value="#{row.get('JOB_NAME')}" /></nobr>
@@ -82,7 +94,7 @@
             </p:column>
 
             <ui:param name="result" value="#{row.get('EXECUTION_RESULT')}" />
-            <p:column headerText="Result" width="68">
+            <p:column headerText="Result" width="62">
                 <h:outputText value="#{result}" class="result-pass" rendered="#{result eq 'PASS'}"/>
                 <h:outputText value="#{result}" class="result-fail" rendered="#{result ne 'PASS'}"/>
             </p:column>
@@ -91,27 +103,26 @@
                 <f:facet name="header">
                     <h:outputText value="# of&#10;Tests" escape="false" style="white-space: pre-line;" />
                 </f:facet>
-                <h:outputText value="#{row.get('NUMBER_OF_TESTS')}" />
+                <h:outputText value="#{row.get('NUMBER_OF_TESTS')}" style="float: right" />
             </p:column>
 
-            <p:column width="58">
+            <p:column width="50">
                 <f:facet name="header">
                     <h:outputText value="# of&#10;Failed" escape="false" style="white-space: pre-line;" />
                 </f:facet>
-                <h:outputText value="#{row.get('NUMBER_OF_FAILURE')}"/>
+                <h:outputText value="#{row.get('NUMBER_OF_FAILURE')}" style="float: right" />
+            </p:column>
+
+            <p:column width="68" headerText="Time">
+                <h:outputText value="#{(row.get('STOP_TIME') - row.get('START_TIME'))/1000.0}" style="font-family: monospace; float: right" >
+                    <f:convertNumber pattern="#0.000 S" />
+                </h:outputText>
             </p:column>
 
             <p:column headerText="Start Time" width="166">
                 <nobr>
                     <h:outputText value="#{mySqlBaseBean.convertToDate(row.get('START_TIME'))}" style="font-family: monospace">
                         <f:convertDateTime type="date" pattern="EEE yyyy-MM-dd HH:mm:ss" timeZone="US/Pacific" />
-                    </h:outputText>
-                </nobr>
-            </p:column>
-            <p:column headerText="Stop Time" width="98">
-                <nobr>
-                    <h:outputText value="#{mySqlBaseBean.convertToDate(row.get('STOP_TIME'))}" style="font-family: monospace">
-                        <f:convertDateTime type="date" pattern="MM-dd HH:mm:ss" timeZone="US/Pacific" />
                     </h:outputText>
                 </nobr>
             </p:column>
