--- a/thr/web/suites_result.xhtml
+++ b/thr/web/suites_result.xhtml
@@ -48,12 +48,12 @@
                 <h:outputText value="#{rowIndex + 1}" rendered="#{row.get('INVISIBLE_ENTRY') != 0}" style="color: darkgray" />
             </p:column>
 
-            <p:column width="80">
+            <p:column width="82">
                 <f:facet name="header">
                     <h:outputText value="Execution&#10;Id" escape="false" style="white-space: pre-line;" />
                 </f:facet>
                 <h:outputLink value="suite_result.xhtml?srid=#{row.get('SUITE_RESULT_ID')}" target="_blank"
-                              style="font-family: monospace" >#{row.get('_EXEC_ID')}</h:outputLink>
+                              style="font-family: monospace" >#{row.get('_srid')}</h:outputLink>
             </p:column>
 
             <p:column headerText="Test Suite Name">
@@ -73,11 +73,11 @@
                 </f:facet>
                 <h:outputText value="#{bn}" rendered="#{bn gt 0}" />
             </p:column>
-
             <ui:param name="result" value="#{row.get('EXECUTION_RESULT')}" />
-            <p:column headerText="Result" width="62">
-                <h:outputText value="#{result}" class="result-pass" rendered="#{result eq 'PASS'}"/>
-                <h:outputText value="#{result}" class="result-fail" rendered="#{result ne 'PASS'}"/>
+            <p:column headerText="Result" width="50" style="text-align: center">
+                <h:graphicImage library="img" name="pass.png" rendered="#{result =='PASS'}"/>
+                <h:graphicImage library="img" name="fail.png" rendered="#{result == 'FAIL'}"/>
+                <h:graphicImage library="img" name="skip.png" rendered="#{!(result == 'FAIL' || result == 'PASS')}"/>
             </p:column>
 
             <p:column width="50">
