update web pages

--- a/thr/web/suite_result.xhtml
+++ b/thr/web/suite_result.xhtml
@@ -11,6 +11,7 @@
         <h:outputScript library="js" name="thr.js" />
         <title>Test Suites Result</title>
     </h:head>
+
     <h:body>
         <ui:param name="srid" value="#{suiteResultView.srid}" />
         <ui:param name="invisible" value="#{suiteResultView.suiteResult.get('INVISIBLE_ENTRY') == 1}" />
@@ -38,11 +39,6 @@
                 <h:outputText value="#{rowIndex + 1}" />
             </p:column>
 
-            <p:column headerText="Id" width="82">
-                <h:outputLink value="test_result.xhtml?trid=#{row.get('TEST_RESULT_ID')}" target="_blank"
-                              style="font-family: monospace" >#{row.get('_trid')}</h:outputLink>
-            </p:column>
-
             <p:column headerText="Test Class Name" width="168">
                 <h:outputText value="#{row.get('_class')}" />
             </p:column>
@@ -52,10 +48,19 @@
             </p:column>
 
             <ui:param name="result" value="#{row.get('EXECUTION_RESULT')}" />
-            <p:column headerText="Result" width="50" style="text-align: center">
-                <h:graphicImage library="img" name="pass.png" rendered="#{result =='PASS'}"/>
-                <h:graphicImage library="img" name="fail.png" rendered="#{result == 'FAIL'}"/>
-                <h:graphicImage library="img" name="skip.png" rendered="#{!(result == 'FAIL' || result == 'PASS')}"/>
+            <p:column headerText="Result" width="56" style="text-align: center">
+                <h:outputLink value="test_result.xhtml?trid=#{row.get('TEST_RESULT_ID')}" target="_blank"
+                              style="font-family: monospace; font-size: larger" >
+                    <h:panelGroup rendered="#{result =='PASS'}">
+                        <h:graphicImage library="img" name="pass.png" /> PASS
+                    </h:panelGroup>
+                    <h:panelGroup rendered="#{result =='FAIL'}">
+                        <h:graphicImage library="img" name="fail.png" /> FAIL
+                    </h:panelGroup>
+                    <h:panelGroup rendered="#{!(result == 'FAIL' || result == 'PASS')}"> SKIP
+                        <h:graphicImage library="img" name="skip.png" />
+                    </h:panelGroup>
+                </h:outputLink>
             </p:column>
 
             <p:column width="68" headerText="Time">
