--- a/thr/web/suites_result.xhtml
+++ b/thr/web/suites_result.xhtml
@@ -14,12 +14,14 @@
     <h:body>
         <ui:param name="suite" value="#{suitesResultView.suiteName}" />
 
-        <h:panelGrid>
+        <h:panelGrid columns="2" style="margin-bottom: 10px">
+            <h:outputLink value=".">
+                <h:graphicImage library="img" name="home.png" alt="Home" />
+            </h:outputLink>
             <h:outputText value="All Test Suites Result" style="font-size: x-large; font-variant: small-caps; font-weight: bold;" />
-            <p:spacer height="10px" />
         </h:panelGrid>
 
-        <h:panelGrid columns="11">
+        <h:panelGrid columns="8">
             <h:outputText value="From" />
             <p:calendar id="starttime" widgetVar="wv_start" pattern="yyyy-MM-dd HH:mm" value="#{suitesResultView.startTime}">
                 <p:ajax event="dateSelect" oncomplete="thr.querySuiteResults('#{suite}')" global="false" />
@@ -28,8 +30,7 @@
             <p:calendar id="stoptime" widgetVar="wv_stop" pattern="yyyy-MM-dd HH:mm" value="#{suitesResultView.stopTime}">
                 <p:ajax event="dateSelect" oncomplete="thr.querySuiteResults('#{suite}')" global="false" />
             </p:calendar>
-            <h:outputText value="," />
-            <h:outputText value="with maximum" />
+            <h:outputText value=", with maximum" />
             <p:spinner id="number" widgetVar="wv_number" value="#{suitesResultView.numberOfEntries}"
                        min="1" max="10000" size="5" onchange="thr.querySuiteResults('#{suite}')" />
             <h:outputText value="entries," />
@@ -38,7 +39,10 @@
                 <f:selectItem id="invisibleIncluded_false" itemLabel="including no invisible entries" itemValue="false" />
                 <f:selectItem id="invisibleIncluded_true" itemLabel="including invisible entries" itemValue="true" />
             </p:selectOneMenu>
-            <p:commandButton onclick="thr.querySuiteResults()" value="All Test Suites" style="font-size: xx-small" rendered="#{not empty suite}" />
+        </h:panelGrid>
+
+        <h:panelGrid columns="1" rendered="#{not empty suite}">
+            <p:commandButton onclick="thr.querySuiteResults()" value="All Test Suites" style="font-size: xx-small" />
         </h:panelGrid>
 
         <p:dataTable value="#{suitesResultView.results}" var="row" rowIndexVar="rowIndex" resizableColumns="true"
@@ -71,9 +75,9 @@
             <p:column headerText="Result" width="78">
                 <h:outputLink value="suite_result.xhtml?srid=#{row.get('SUITE_RESULT_ID')}" target="_blank"
                               style="font-family: monospace; font-size: larger" >
-                    <h:graphicImage library="img" name="pass.png" rendered="#{result =='PASS'}" />
-                    <h:graphicImage library="img" name="fail.png" rendered="#{result =='FAIL'}" />
-                    <h:graphicImage library="img" name="skip.png" rendered="#{!(result == 'FAIL' || result == 'PASS')}" />
+                    <h:graphicImage library="img" name="pass.png" alt="#{result}" rendered="#{result =='PASS'}" />
+                    <h:graphicImage library="img" name="fail.png" alt="#{result}" rendered="#{result =='FAIL'}" />
+                    <h:graphicImage library="img" name="skip.png" alt="#{result}" rendered="#{!(result == 'FAIL' || result == 'PASS')}" />
                     #{result}
                 </h:outputLink>
             </p:column>
